--- a/app/src/main/res/layout/activity_checkout12.xml
+++ b/app/src/main/res/layout/activity_checkout12.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CheckoutActivity12">
+    tools:context=".CheckoutActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
