--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,10 +40,10 @@
     <TextView
         android:id="@+id/top_blank_inbox_saved"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topMessage3" />
+        app:layout_constraintTop_toBottomOf="@+id/homeTopBox" />
 
     <ScrollView
         android:id="@+id/scroll_view"
@@ -66,7 +66,7 @@
                 android:id="@+id/profile_button"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="400dp"
                 android:background="@drawable/settings_page_all_gray_curved_corners"
                 android:fontFamily="@font/sofia_regular"
                 android:foreground="@drawable/ripple"
@@ -83,7 +83,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/cvLayout"
                 app:layout_constraintHorizontal_bias="0.506"
                 app:layout_constraintStart_toStartOf="@+id/cvLayout"
-                app:layout_constraintTop_toTopOf="@+id/cvLayout" />
+                app:layout_constraintTop_toBottomOf="@+id/rewards_white_box_top" />
 
             <Button
                 android:id="@+id/change_password_button"
@@ -157,6 +157,88 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/change_password_button" />
 
+            <TextView
+                android:id="@+id/rewards_white_box_top"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/settings_page_all_white_curved_corners"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/point_count_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                android:fontFamily="@font/sofia_regular"
+                android:letterSpacing="0.1"
+                android:text="100 points collected!"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
+                app:layout_constraintTop_toTopOf="@+id/rewards_white_box_top" />
+
+            <TextView
+                android:id="@+id/point_bar_leftside"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="100dp"
+                android:background="@drawable/settings_page_all_gray_curved_corners"
+                app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
+                app:layout_constraintHorizontal_bias="0.479"
+                app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
+                app:layout_constraintTop_toBottomOf="@+id/point_count_text" />
+
+            <TextView
+                android:id="@+id/point_bar_leftside2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="150dp"
+                android:background="@drawable/profile_page_all_curved_corners_red"
+                app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
+                app:layout_constraintHorizontal_bias="0.479"
+                app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
+                app:layout_constraintTop_toBottomOf="@+id/point_count_text" />
+
+            <TextView
+                android:id="@+id/circle_coffee"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="-5dp"
+                android:background="@drawable/settings_page_all_gray_curved_corners"
+                app:layout_constraintBottom_toBottomOf="@+id/point_bar_leftside"
+                app:layout_constraintStart_toEndOf="@+id/point_bar_leftside"
+                app:layout_constraintTop_toTopOf="@+id/point_bar_leftside" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:layout_constraintBottom_toBottomOf="@+id/circle_coffee"
+                app:layout_constraintEnd_toEndOf="@+id/circle_coffee"
+                app:layout_constraintStart_toStartOf="@+id/circle_coffee"
+                app:layout_constraintTop_toTopOf="@+id/circle_coffee"
+                app:srcCompat="@drawable/coffee_cup" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="32dp"
+                app:layout_constraintEnd_toEndOf="@+id/rewards_white_box_top"
+                app:layout_constraintStart_toStartOf="@+id/rewards_white_box_top"
+                app:layout_constraintTop_toBottomOf="@+id/rewards_white_box_top"
+                app:srcCompat="@drawable/coffee1" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -175,6 +257,57 @@
         app:menu="@menu/navigation_items">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <ImageView
+        android:id="@+id/inbox_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:foreground="@drawable/ripple_red_25_corners"
+        android:onClick="profilePage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topMessage3"
+        app:srcCompat="@drawable/mail" />
+
+    <ImageView
+        android:id="@+id/saved_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="80dp"
+        android:foreground="@drawable/ripple_red_25_corners"
+        android:onClick="profilePage"
+        app:layout_constraintEnd_toEndOf="@+id/top_blank_inbox_saved"
+        app:layout_constraintTop_toBottomOf="@+id/topMessage3"
+        app:srcCompat="@drawable/saved_icon" />
+
+    <TextView
+        android:id="@+id/inbox_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/sofia_regular"
+        android:text="Inbox"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:letterSpacing="0.2"
+        app:layout_constraintBottom_toBottomOf="@+id/inbox_icon"
+        app:layout_constraintStart_toEndOf="@+id/inbox_icon"
+        app:layout_constraintTop_toTopOf="@+id/inbox_icon" />
+
+    <TextView
+        android:id="@+id/saved_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/sofia_regular"
+        android:letterSpacing="0.2"
+        android:text="Saved"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/saved_icon"
+        app:layout_constraintStart_toEndOf="@+id/saved_icon"
+        app:layout_constraintTop_toTopOf="@+id/saved_icon" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
