--- a/app/src/main/res/layout/activity_inbox_page.xml
+++ b/app/src/main/res/layout/activity_inbox_page.xml
@@ -128,7 +128,7 @@
         android:layout_height="38dp"
         android:background="@drawable/settings_page_all_white_curved_corners"
         android:fontFamily="@font/sofia_regular"
-        android:text=" "
+        android:text="WELCOME!"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
