--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -129,5 +129,15 @@
         app:layout_constraintStart_toStartOf="@+id/whiteBox"
         app:layout_constraintTop_toBottomOf="@+id/drink1" />
 
+    <TextView
+        android:id="@+id/card_used"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:fontFamily="@font/sofia_regular"
+        android:text="Card Used:"
+        app:layout_constraintStart_toStartOf="@+id/whiteBox"
+        app:layout_constraintTop_toBottomOf="@+id/total_price" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
