--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -29,7 +29,7 @@
             app:srcCompat="@drawable/latte_circle" />
 
         <TextView
-            android:id="@+id/cart_item_name"
+            android:id="@+id/order_item_name"
             android:layout_width="210dp"
             android:layout_height="52dp"
             android:layout_alignParentTop="true"
