--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -29,8 +29,7 @@
         app:backgroundTint="@color/red_ec"
         app:layout_constraintBottom_toBottomOf="@+id/whiteBox"
         app:layout_constraintEnd_toEndOf="@+id/whiteBox"
-        app:layout_constraintStart_toStartOf="@+id/whiteBox"
-        app:layout_constraintTop_toBottomOf="@+id/messageList" />
+        app:layout_constraintStart_toStartOf="@+id/whiteBox" />
 
     <TextView
         android:id="@+id/whiteBox"
@@ -110,12 +109,11 @@
         android:id="@+id/history_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/back_button"
         app:layout_constraintEnd_toEndOf="@+id/whiteBox"
         app:layout_constraintStart_toStartOf="@+id/whiteBox"
-        app:layout_constraintTop_toBottomOf="@+id/orderNameAndPrice" />
+        app:layout_constraintTop_toBottomOf="@+id/card_used" />
 
     <TextView
         android:id="@+id/orderNameAndPrice"
@@ -134,11 +132,12 @@
         android:id="@+id/card_used"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:fontFamily="@font/sofia_regular"
         android:text="Card Used:"
-        app:layout_constraintStart_toStartOf="@+id/whiteBox"
-        app:layout_constraintTop_toBottomOf="@+id/total_price" />
+        android:textColor="#EAE0E0"
+        app:layout_constraintEnd_toEndOf="@+id/orderNameAndPrice"
+        app:layout_constraintStart_toStartOf="@+id/orderNameAndPrice"
+        app:layout_constraintTop_toBottomOf="@+id/orderNameAndPrice" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
