--- a/app/src/main/res/layout/activity_edit_payment_plans.xml
+++ b/app/src/main/res/layout/activity_edit_payment_plans.xml
@@ -77,6 +77,7 @@
                 android:paddingTop="10dp"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/profileName" />
@@ -92,6 +93,7 @@
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="25dp"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
